--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+    font-family: "Kanit", sans-serif;
     margin: 0;
     background: #000000;
     color: #ffffff;
@@ -41,6 +42,7 @@ nav {
 }
 
 nav button {
+    font-family: "Kanit", sans-serif;
     height: 75%;
     color: #ffffff;
     font-weight: bold;
@@ -97,7 +99,7 @@ li *:visited {
     font-weight: bold;
 }
 
-li *:link:hover,
-li *:visited:hover {
+li:hover *:link,
+li:hover *:visited {
     color: #ffbb00;
 }
